<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="aboutButtonText">About</string>
    <string name="aboutMainText">"This started as a java program years ago, and seemed like a good concept for learning Android. As you can see, I learned more about app functionality than design… I don't know how much time I'll dedicate to improvements, but if you have suggestions please send me an email. Thanks for giving ScopeSighter a try! 

PS If there are any Android/Web UI people out there looking for a portfolio project…I know a guy who could use you."</string>
    <string name="aboutTitleText">About ScopeSighter</string>
    <string name="adjustYourScopeText">"Adjust your scope's"</string>
    <string name="app_name">ScopeSighter</string>
    <string name="backButtonText">Back</string>
    <string name="backgroundContentDescription">Fade Background</string>
    <string name="clicksText">clicks</string>
    <string name="clockwiseAdjustsLeftText">"1 windage increment
clockwise moves
shot placement:"</string>
    <string name="clockwiseAdjustsUpText">"1 elevation increment
clockwise moves
shot placement:"</string>
    <string name="clockwiseText">clockwise</string>
    <string name="selectBackgroundText">Select Background</string>
    <string name="targetBackgroundOption1">SW 4 Elementos</string>
    <string name="targetBackgroundOption2">SW 12 Elementos</string>
    <string name="targetBackgroundOption3">Genéric Target</string>
    <string name="closeButtonText">Close</string>
    <string name="counterClockwiseText">counter-clockwise</string>
    <string name="deleteRangeButtonText">Delete Range</string>
    <string name="deleteScopeButtonText">Delete Scope</string>
    <string name="dialogBodyText">"1) Click the \"Scope And Range Manager\" Button 
2) Enter the info for your scope and range
3) Put down your phone, and shoot a grouping
4) Press the \"New Session\" button
5) Tap on the screen to match your paper target
6) Press \"Display Results,\" make the adjustments, and repeat as necessary!"</string>
    <string name="dialogTitleText">The Art of ScopeSighter-ing</string>
    <string name="diameterOfTargetText">Target diameter (in)</string>
    <string name="displayResultButtonText">Display Results</string>
    <string name="elevationText">Elevation</string>
    <string name="feetToTargetText">Feet to Target:</string>
    <string name="freshTargetButtonText">Fresh Target for Next Grouping</string>
    <string name="ftInputPrompt">ft</string>
    <string name="goButtonText">Go!</string>
    <string name="helpButtonText">Help!</string>
    <string name="homeButtonText">Home</string>
    <string name="inInputPrompt">in</string>
    <string name="inchesAtText">"Distance to target
your scope specifies
for adjustments? (yds)"</string>
    <string name="languageEnglish">English</string>
    <string name="languageSpanish">Español</string>
    <string name="logoAltText">The scopesighter logo</string>
    <string name="metersToTargetText">Meters to Target:</string>
    <string name="metricDiameterOfTargetText">Target diameter (cm)</string>
    <string name="metricDistanceForScopeText">"Distance to target
your scope specifies
for adjustments? (m)"</string>
    <string name="metricOneClickEqualsText">"Distance shot
placement is changed
per increment (cm)"</string>
    <string name="newSessionButtonText">New Session</string>
    <string name="oneClickEqualsText">"Distance shot
placement is changed
per increment (in)"</string>
    <string name="pleaseInputValuesText">Please provide the information requested below. This data will be used by the app to calculate the correct adjustments you should make to your scope, based on the shot groupings that you provide on the next screen.</string>
    <string name="qMark">Help</string>
    <string name="rangeNamePrompt">Range Name</string>
    <string name="range_prompt">Choose a range</string>
    <string name="rangesText">Ranges:</string>
    <string name="resultsTitleText">Results</string>
    <string name="resultsToHomeButtonText">New Scope/Range Info</string>
    <string name="saveRangeButtonText">Save Range</string>
    <string name="saveScopeButtonText">Save Scope</string>
    <string name="scopeAndRangeManagerButtonText">Scope and Range Manager</string>
    <string name="scopeNamePrompt">Scope Name</string>
    <string name="scopeSighterHomeTitleText">Scope Sighter</string>
    <string name="scope_prompt">Choose a scope</string>
    <string name="scopesText">Scopes:</string>
    <string name="search_menu_title">Search</string>
    <string name="selectLanguageButtonText">Select Language</string>
    <string name="showTargetButtonText">Show Target and Begin</string>
    <string name="sightingSessionTitleText">Sighting Session</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="testString">Test</string>
    <string name="tfPrompt">T/F</string>
    <string name="titleResults">Resultados</string>
    <string name="titleScopeSighterHome">ScopeSighter</string>
    <string name="titleSessionInfo">Session Information</string>
    <string name="titleSightingSession">Sighting Session</string>
    <string name="toggleDown">Down</string>
    <string name="toggleLeft">Left</string>
    <string name="toggleRight">Right</string>
    <string name="toggleUp">Up</string>
    <string name="unitsButtonImperialText">App is Imperial</string>
    <string name="unitsButtonImperialTextToggle">"App is Imperial
Tap to Toggle"</string>
    <string name="unitsButtonMetricText">App is Metric</string>
    <string name="unitsButtonMetricTextToggle">"App is Metric
Tap to Toggle"</string>
    <string name="windageText">Windage</string>
    <string name="yardsInputPrompt">(yd)</string>
    <string name="yardsText">yardas</string>
</resources>
