<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:id="@id/mainTableLayout" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="match_parent" android:stretchColumns="*" android:shrinkColumns="*"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow android:gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:paddingTop="25.0dp" android:paddingBottom="25.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/sslogo" android:adjustViewBounds="true" android:layout_span="2" android:contentDescription="@string/logoAltText" />
    </TableRow>
    <TableRow android:gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:id="@id/aboutButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_span="2" android:text="@string/aboutButtonText" />
    </TableRow>
    <TableRow>
        <Button android:id="@id/scopeAndRangeManagerButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_span="2" android:text="@string/scopeAndRangeManagerButtonText" />
    </TableRow>
    <TableRow android:paddingTop="35.0dp">
        <TextView android:textSize="18.0sp" android:textColor="#000000" android:gravity="center" android:id="@id/scopesTextView" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/scopesText" android:layout_weight="0.5" />
        <Spinner android:id="@id/scopeSpinner" android:layout_width="wrap_content" android:layout_height="wrap_content" android:prompt="@string/scope_prompt" android:layout_weight="0.5" />
    </TableRow>
    <TableRow>
        <TextView android:textSize="18.0sp" android:textColor="#000000" android:gravity="center" android:id="@id/rangesTextView" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/rangesText" />
        <Spinner android:id="@id/rangeSpinner" android:layout_width="wrap_content" android:layout_height="wrap_content" android:prompt="@string/range_prompt" android:layout_weight="0.5" />
    </TableRow>
    <TableRow android:background="@android:color/transparent" android:paddingTop="35.0dp">
        <Button android:id="@id/newSessionButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_span="2" android:text="@string/newSessionButtonText" />
    </TableRow>
    <TableRow android:background="@android:color/transparent">
        <Button android:id="@id/helpButton" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_span="1" android:text="@string/helpButtonText" android:layout_weight="0.5" />
        <Button android:id="@id/unitsButton" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_span="1" android:layout_weight="0.5" />
    </TableRow>
    <TableRow android:background="@android:color/transparent" android:paddingTop="15.0dp">
        <Button android:id="@+id/selectLanguageButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_span="2" android:text="@string/selectLanguageButtonText" />
    </TableRow>
</TableLayout>
