<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="#000000" android:id="@id/aboutTitleTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="30.0dp" android:text="@string/aboutTitleText" />
    <TextView android:textColor="#000000" android:id="@id/aboutTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dp" android:layout_marginRight="15.0dp" android:text="@string/aboutMainText" />
    <Button android:layout_gravity="center|bottom" android:id="@id/aboutHomeButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="30.0dp" android:text="@string/homeButtonText" />
</LinearLayout>
